# Zappy

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  ai_protocol.json  config.json  dashboard_config.json  docker-compose.yaml  doxy.conf
.github/ISSUE_TEMPLATE/: ai-feature-request.md  display-feature-request.md  server-feature-request.md
.github/workflows/: c-ci.yml  cleanup.yml  coding-style.yml  conventional-commits.yml  conventional.yml  cpp-ci.yml  pipeline-gui.yml  pipeline-rust.yml  pipeline-server.yml  rust-ci.yml  tests.yml  zappy.yml
ai/: Cargo.toml  Makefile
ai/json/: Cargo.toml
ai/json/src/: array.rs  bool.rs  lib.rs  null.rs  number.rs  object.rs  string.rs
ai/macros/: Cargo.toml
ai/macros/src/: lib.rs
ai/src/: ai.rs  cipher.rs  command.rs  crypt.rs  elevation.rs  flags.rs  json.rs  main.rs  move_to_tile.rs  move_towards_broadcast.rs  tcp.rs
ai/src/ai/: ai_create.rs  bot.rs  empress.rs  fetus.rs  knight.rs  npc.rs  queen.rs  utils.rs
ai/src/commands/: broadcast.rs  drop_object.rs  eject.rs  fork.rs  incantation.rs  inventory.rs  look_around.rs  mod.rs  move_up.rs  take_object.rs  turn.rs  unused_slots.rs
ai/src/json/: array.rs  bool.rs  mod.rs  null.rs  number.rs  object.rs  string.rs
ai/src/roles/: bot.rs  mod.rs
ai/src/tcp/: command_handle.rs
devops-scripts/: install-rust.sh
docker/: entrypoint.sh
gui/: .clang-format  Doxyfile  Makefile
gui/assets/: egg.glb  grass.glb  grass2.fbx  grass2.glb  player.glb  untitled.mtl
rust-macros/: Cargo.toml
server/: .clang-format  Dockerfile  Doxyfile  Makefile  server.uml
(+495 files in other folders)
