[package]
name = "ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.8"
env_logger = "0.11"
log = "0.4"
zappy-macros = { path = "macros" }
zappy-json = { path = "json" }
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
